# zcash-vote-server

./: CHANGELOG.md  Cargo.toml  README.md  Rocket.toml  release-please-config.json
.github/workflows/: build.yaml  release-please.yml
doc/: deploy.md
src/: ballot.rs  chain.rs  context.rs  db.rs  election.rs  lib.rs  main.rs  routes.rs
