[package]
name = "zcash-vote-server"
version = "1.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
sqlx = {version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"]}
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
hex = "0.4.3"
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_cors = "0.6.0"
lazy_static = "1.5.0"
tendermint-abci = {version = "0.40.1", features = ["client"]}
tendermint = "0.40.1"
tendermint-proto = "0.40.1"
blake2b_simd = "1.0.2"
base64 = "0.22"
reqwest = {version = "0.12", features = ["json"]}

zcash-vote = {git = "https://github.com/hhanh00/zcash-vote.git", rev="f05f5f2569f286f3ef09ed7edfd008a6b4f35777"}
orchard = "0.11.0"

[patch.crates-io]
orchard = {git = "https://github.com/hhanh00/orchard.git", rev="75448e671f56f7c6d3f29502f5a26370a056b86c"}
#orchard = {path="../orchard"}
#halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
#halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }

[patch."https://github.com/hhanh00/zcash-vote.git"]
#zcash-vote = {path = "../zcash-vote"}

[profile.dev]
opt-level = 3
debug = true
