[package]
name = "zcash-vote-server"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
# rusqlite = "0.29.0"
# r2d2 = "0.8.10"
# r2d2_sqlite = "0.22.0"
hex = "0.4.3"
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_cors = "0.6.0"
lazy_static = "1.5.0"
tendermint-abci = {version = "0.40.1", features = ["client"]}
tendermint = "0.40.1"
tendermint-proto = "0.40.1"
blake2b_simd = "1.0.2"
base64 = "0.22"
reqwest = {version = "0.12", features = ["json"]}
sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"]}
#zcash-vote = {path = "../zcash-vote"}
zcash-vote = {git = "https://github.com/hhanh00/zcash-vote.git", rev="7ade397f742dc86d399e340d7c86306ee2a6aab3"}
orchard = "0.3.0"
getopt = "1.1.9"

[patch.crates-io]
orchard = {git = "https://github.com/hhanh00/orchard.git", rev="dff7dee"}
#orchard = {path="../orchard"}
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }

[profile.dev]
opt-level = 3
debug = true
